new list items now have class of tab selected

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
       </header>
         <nav>
           <ul>
-            <li class="nav-li dropshadow" id="add-list">Add List</li>
+            <li class="dropshadow" id="add-list">Add List</li>
+            <li class="nav-li add">
+              <input type="text" placeholder="List Name" class="new-list dropshadow"></input>
+              <button type="submit" class="dropshadow addList">Add</button></li>
           </ul>
+          <ul id="nav-tabs"></ul>
         </nav>
       <form class="list" action="index.html" method="post">
         <label>
