delete still not working

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
               <input type="text" placeholder="List Name" class="new-list dropshadow"></input>
               <button type="submit" class="dropshadow addList">Add</button></li>
           </ul>
-          <ul id="nav-tabs"></ul>
+          <ul id="nav-tabs">
+            <li class="nav-li dropshadow main">Main</li>
+          </ul>
         </nav>
       <form class="list" action="index.html" method="post">
         <label>
@@ -31,7 +33,7 @@
       <button type="submit" name="button" class="delete-selected dropshadow">Remove Selected</button>
   </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="list.js"></script>
-    <script src="tabs.js"></script>
+    <script src="/list.js"></script>
+    <script src="/tabs.js"></script>
   </body>
 </html>
