new tab makes new list, click tab shows only tab-labeled list

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         </label>
         <button type="submit" name="button" class="add-item dropshadow">Add Item</button>
       </form>
-      <ul id="list" class="dropshadow"></ul>
+      <section id="uls">
+        <ul id="list" class="dropshadow toDoUl Main"></ul>
+      </section>
       <button type="submit" name="button" class="delete-selected dropshadow">Remove Selected</button>
   </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
