--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </header>
         <nav>
           <ul>
-            <li class="dropshadow" id="add-list">Add List</li>
+            <li class="dropshadow nav-li" id="add-list">Add List</li>
             <li class="nav-li add">
               <input type="text" placeholder="List Name" class="new-list dropshadow"></input>
               <button type="submit" class="dropshadow addList">Add</button></li>
@@ -35,7 +35,7 @@
       <button type="submit" name="button" class="delete-selected dropshadow">Remove Selected</button>
   </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="/list.js"></script>
     <script src="/tabs.js"></script>
+    <script src="/list.js"></script>
   </body>
 </html>
