--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="/tabs.js"></script>
     <script src="/list.js"></script>
+    <script src="/templateList.js"></script>
   </body>
 </html>
